css fixed, sidebar is loading vertically

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <div id="sidebar"></div> 
+    <aside id="sidebar"></aside> 
     <div id="content"></div>
     <div id="footer"></div>
 
